Remove listModels query from nodejs-server
