# api/swagger.yaml
@@ -10,47 +10,6 @@ schemes:
 security:
   - URS4: [read, write]
 paths:
-  /listModels:
-    get:
-      summary: "Lists Models"
-      description:
-        "Lists 'Model' objects each with an icon, description and count\
-        \ of number of instances of an object."
-      operationId: "listModels"
-      parameters:
-        - name: "properties"
-          in: "query"
-          description: "Comma-separated list of fields to be returned"
-          required: false
-          type: "array"
-          items:
-            type: "string"
-          collectionFormat: "csv"
-      responses:
-        200:
-          description: "Successful response"
-          schema:
-            type: "array"
-            title: "ArrayOfModels"
-            items:
-              $ref: "#/definitions/modelCatalogEntry"
-        400:
-          description: "Bad request"
-          schema:
-            $ref: "#/definitions/error"
-        422:
-          description: "Invalid syntax"
-          schema:
-            $ref: "#/definitions/error"
-        500:
-          description: "Server error"
-          schema:
-            $ref: "#/definitions/error"
-        503:
-          description: "Service not available"
-          schema:
-            $ref: "#/definitions/error"
-      x-swagger-router-controller: "Meditor"
   /putModel:
     post:
       summary: "Adds a Model"
